# icloud-mail-cleanup-v2

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  design-conference-report.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-scanning-metadata-classification/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-content-analysis-full-classification/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-report-review-safe-execution/: 03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-interface-gui/: .continue-here.md  04-02-PLAN.md  04-02-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: web-ui-review.md
src/icloud_cleanup/: __init__.py  __main__.py  api_fallback.py  auto_triage.py  checkpoint.py  classifier.py  cli.py  clusterer.py  contacts.py  display.py  embedder.py  emlx_parser.py  executor.py  feedback.py  models.py  propagation.py  report.py  review.py  scanner.py
tests/: conftest.py  helpers.py  test_api_fallback.py  test_auto_triage.py  test_checkpoint.py  test_classifier.py  test_clusterer.py  test_contacts.py  test_embedder.py  test_emlx_parser.py  test_executor.py  test_feedback.py  test_models.py  test_propagation.py  test_report.py  test_review.py  test_scanner.py  test_tui.py
(+55 files in other folders)
