[project]
name = "icloud-cleanup"
version = "0.1.0"
description = "Intelligent iCloud email classification and cleanup"
readme = "README.md"
authors = [
    { name = "JaviOFC", email = "JaviOFC@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.3.3",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
