[project]
name = "icloud-cleanup"
version = "0.1.0"
description = "Intelligent iCloud email classification and cleanup"
readme = "README.md"
authors = [
    { name = "JaviOFC", email = "JaviOFC@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "mlx-embeddings>=0.0.5",
    "numpy>=2.4.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "textual>=1.0.0,<2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]
